# ki-editor

./: .envrc  .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  README.md  REVERT_PLACEHOLDER.txt  TODOS.md  app_config_json_schema.json  biome.json  build-all-platforms.sh  build.rs  configurations.html  control-panel.txt  core-concepts.html  devenv.nix  dummy-todo.md  editor.worker.js  error_log  flake.nix  index.html  installation.html  introduction.html  json.worker.js  justfile  keybindings.md  keyboard-layouts.json  log.lua  lunr-index-1744554227125.json  lunr-index-1744555351325.json  lunr-index-1744616735083.json  lunr-index-1744621521746.json  lunr-index-1744637995241.json  lunr-index-1744688386043.json  lunr-index-1744690658816.json  lunr-index-1744712124682.json  lunr-index-1744723512809.json  (+845 more)
.cargo/: config.toml
.config/: nextest.toml
.github/scripts/: sync-release-channels.sh
.github/workflows/: github-pages.yml  latest.yml  nightly.yml  release-common.yml  release.yml  rust.yml  sync-release-channels.yml  (+2 more)
.ki/: config.json
blog/: atom.xml  index.html  rss.xml
channels/: snapshot-latest.txt  snapshot-versions.txt
comparisons/: helix.html  index.html  modal-editors.html  vim.html
components/: file-explorer.html  index.html  prompt.html
contrib/: emoji-icon-theme.json  nerd-font-icon-theme.json
docs/: .gitignore  biome.json  book.toml  docusaurus.config.ts  justfile  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts  tsconfig.json  validate.test.ts  validate.ts
docu/: docusaurus.config.ts  justfile  tsconfig.json
event/: Cargo.toml
grammar/: Cargo.toml  NOTICE  build.rs
grammar/src/: grammar.rs  lib.rs
insert-mode/: index.html
key_event/: Cargo.toml
key_event_macro/: Cargo.toml
keyboard-layouts/: ENTHIUM.json
keymaps/: Actions.json  Buffer.json  Completion Items.json  Cut.json  Delete.json  Duplicate.json  Eat.json  Extend.json  File Explorer Actions.json  Insert Mode Delete MoL.json  Insert.json  Movement History.json  Movements.json  Multi-cursor Menu.json  Multi-cursor Momentary Layer.json  Multi-cursor.json  Normal.json  Open.json  Other Movements.json  Other movements.json  Paste.json  Primary Selection Modes.json  Secondary Selection Modes (Global).json  Secondary Selection Modes (Local Backward).json  Secondary Selection Modes (Local Forward).json  Secondary Selection Modes (Local).json  Secondary Selection Modes Init.json  Space Context.json  Space Editor.json  Space LSP.json  Space Pick.json  Space.json  Sub Modes.json  Surround.json  Swap.json  Transform.json  Undo-Redo.json  Universal Keymap.json
ki-bin/: Cargo.toml  build.rs
ki-jetbrains/: .gitignore  build.gradle.kts  settings.gradle.kts
ki-protocol-types/: Cargo.toml
ki-tutor/: CONTRIBUTING.md  README.md  TODO.md  colemak.rs  dvorak.rs  ki-tutor.rs  project_setup.txt  qwerty.rs  requirements.txt
ki-vscode/: .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  README.md  TODO.md  biome.json  eslint.config.cjs  jest.config.js  package-lock.json  package.json  tsconfig.json  vscode-neovim.md
my_proc_macros/: Cargo.toml
my_proc_macros/src/: lib.rs
normal-mode/: commands.html  core-movements.html  index.html  movement-actions.html  other-movements.html  space-menu.html
nvim-treesitter-highlight-queries/: Cargo.toml  build.rs  nvim-treesitter-commit-hash.txt  update-queries.py
old_docs/: 00100-core-concepts.md
recipes/: Char.json  Token.json  add-cursor-to-all-matching-selections.json  add-cursor-with-movement.json  align-selections.json  align-view.json  ast-grep.json  big-word.json  break.json  case-sensitive.json  change.json  char.json  close-file.json  cut-one.json  cut.json  delete-0-gap.json  delete-cursor.json  delete-cut.json  delete-finer-movement.json  delete-one.json  delete-submode.json  delete.json  duplicate-with-gaps.json  duplicate.json  enter-normal-mode.json  expand.json  extend.json  filter-matching-selections.json  fine-word.json  insert.json  join.json  jump.json  keep-primary-cursor-only.json  line.json  literal-search.json  mark-file.json  match-whole-subword.json  match-whole-word.json  movement-history-mol.json  multi-cursor.json  (+33 more)
reference/: < Eat.md  << Eat.md  All.md  Coarse Redo.md  Coarse Undo.md  Decl.md  Def.md  Eat >.md  Eat >>.md  Eat >|.md  Eat ^.md  Eat v.md  Error.md  Fine Redo.md  Fine Undo.md  Hint.md  Impl.md  In Calls.md  Info.md  Left.md  Out Calls.md  Ref+.md  Ref-.md  Type.md  Warn.md  |< Eat.md
shared/: Cargo.toml
shared/src/: absolute_path.rs  canonicalized_path.rs  config.rs  download.rs  formatter.rs  get_minimal_unique_paths.rs  grammar.rs  icons.rs  language.rs  languages.rs  lib.rs  process_command.rs  ts_highlight_query.rs
src/: alternator.rs  app.rs  auto_key_map.rs  background_worker.rs  buffer.rs  canonicalized_path.rs  char_index_range.rs  cli.rs  clipboard.rs  completion.rs  component.rs  config.rs  config_default.json  context.rs  debouncer.rs  diagnostic.rs  divide_viewport.rs  edit.rs  engine.rs  env.rs  format_path_list.rs  generate_recipes.rs  global_multicursor.rs  grid.rs  handle_custom_action.rs  history.rs  integration_event.rs  integration_test.rs  key_event_parser.rs  keymap.rs  layout.rs  lib.rs  macro_help_player.rs  main.rs  multibuffer.rs  non_empty_extensions.rs  osc52.rs  position.rs  process_command.rs  process_manager.rs  (+28 more)
themes/: alabaster-color-theme.json  gruber_darker_zed.json  modus.json  monokai_st3.json  mqual_blue_zed.json  nord.json  rose-pine.json  tokyo-night.json
tree_sitter_quickfix/: Cargo.toml  binding.gyp  grammar.js  justfile  package-lock.json  package.json
tree_sitter_quickfix/bindings/node/: binding.cc  index.js
tree_sitter_quickfix/bindings/rust/: lib.rs
tree_sitter_quickfix/corpus/: example-1.txt
tree_sitter_quickfix/src/: grammar.json  node-types.json  parser.c
tree_sitter_yard/: Cargo.toml  binding.gyp  grammar.js  package.json
zed_theme/: Cargo.toml  build.rs
zed_theme/src/: lib.rs  zed_theme_schema.json  zed_theme_schema.rs
zed_theme/themes/: monokai.json
(+2442 files in other folders)
