[workspace]
resolver = "3"
default-members = ['ki-bin']
members = [
  'event',
  'my_proc_macros',
  'grammar',
  'ki-bin',
  'shared',
  'tree_sitter_quickfix',
  'zed_theme',
  'ki-protocol-types',
  'nvim-treesitter-highlight-queries',
]
exclude = ['tests/mock_repos/rust1']

[workspace.dependencies]
# `use-dev-tty` is needed so that the app doesn't hang if STDIN is present
# See:
# - https://github.com/crossterm-rs/crossterm/pull/956
# - https://github.com/crossterm-rs/crossterm/issues/828
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
convert_case = "0.6.0"
regex = "1.8.1"
fancy-regex = "0.14.0"
tree-sitter = "0.25.6"
serde_json = "1.0.96"
anyhow = "1.0.70"
once_cell = "1.18.0"
serde = { version = "1.0.163", features = ["derive"] }
lsp-types = "0.95.0"
tempfile = "3.6.0"
log = { version = "0.4.17", features = ["std"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
itertools = "~0.13.0"
tree-sitter-quickfix = { path = "tree_sitter_quickfix" }
miniz_oxide = "0.8.9"
schemars = "1.1.0"

[profile.release]
debug = false # Set this to true when using `sudo cargo flamegraph`

[profile.release-lto]
inherits = 'release'
lto = true
