[package]
name = "ki"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.83"

[workspace]
members = [
  'event',
  'my_proc_macros',
  'grammar',
  'shared',
  'tree_sitter_quickfix',
  'zed_theme',
  'ki-protocol-types',
  'nvim-treesitter-highlight-queries',
]
exclude = ['mock_repos/rust1']

[workspace.dependencies]
# `use-dev-tty` is needed so that the app doesn't hang if STDIN is present
# See:
# - https://github.com/crossterm-rs/crossterm/pull/956
# - https://github.com/crossterm-rs/crossterm/issues/828
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
convert_case = "0.6.0"
regex = "1.8.1"
fancy-regex = "0.14.0"
tree-sitter = "0.25.6"
serde_json = "1.0.96"
anyhow = "1.0.70"
once_cell = "1.18.0"
serde = { version = "1.0.163", features = ["derive"] }
lsp-types = "0.95.0"
tempfile = "3.6.0"
log = { version = "0.4.17", features = ["std"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
itertools = "~0.13.0"
tree-sitter-quickfix = { path = "tree_sitter_quickfix" }
miniz_oxide = "0.8.9"
schemars = "1.1.0"

[features]
default = ["wayland"]
wayland = ["arboard/wayland-data-control"]

[build-dependencies]
chrono = "0.4.39"
grammar = { path = "grammar" }
shared = { path = "shared" }

ki-protocol-types = { path = "ki-protocol-types" }

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
regex.workspace = true
fancy-regex.workspace = true
lsp-types.workspace = true
log.workspace = true
ropey = "1.6.1"
simple-logging = "2.0.2"
once_cell.workspace = true
serde_json.workspace = true
serde.workspace = true
tree-sitter.workspace = true
itertools.workspace = true
thiserror = { version = "1.0.56" }
tree-sitter-md = "~0.3.2"
diffy = "~0.4.0"
ast-grep-core = "0.37.0"
git2 = {version = "~0.19.0", default-features = false,  features = ["vendored-libgit2"] }
grep-searcher = "0.1.11"
grep-regex = "0.1.11"
json-rpc-types = "1.3.0"
arboard = { version = "3.2", default-features = false }
event = { path = "event" }
grammar = { path = "grammar" }
shared = { path = "shared" }
tree-sitter-quickfix.workspace = true
zed-theme = { path = "zed_theme" }
my_proc_macros = { path = "my_proc_macros" }
tree-sitter-highlight = "0.25.6"
convert_case.workspace = true
ignore = "0.4.20"
clap = { version = "~4.5.23", features = ["derive"] }
rayon = "1.8.0"
similar = {version = "2.4.0", features = ["unicode", "inline"]}
tree-sitter-traversal2 = { version = "0.1.4", package = "baz-tree-sitter-traversal" }
indexmap = { version = "2.2.2", features = ["serde"] }
globset = "0.4.14"
unicode-width = "~0.2.0"
lazy-regex = "~3.4.1"
debounce = "0.2.2"
nucleo-matcher = "0.3.1"
nary_tree = "0.4.3"
strum = "0.26.2"
strum_macros = "0.26.2"
nonempty = "~0.11.0"
base64 = "0.22.1"
comfy-table = "7.1.3"
chrono = "0.4.39"
ki-protocol-types = { path = "ki-protocol-types" }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
url = { version = "2.5.2" }
figment = { version = "0.10.19", features = ["json", "toml", "yaml"] }

# Add tungstenite for WebSocket support
tungstenite = "0.21"
libc = "0.2.174"
crc32fast = "1.4.2"
scraper = "0.24.0"
imara-diff = "0.2.0"
nucleo = "0.5.0"
notify = "8.2.0"
schemars.workspace = true
serde_path_to_error = "0.1.20"

[dev-dependencies]
serial_test = "~3.2.0"
pretty_assertions = "1.3.0"
fs_extra = "1.3.0"
quickcheck.workspace = true
quickcheck_macros.workspace = true
tree-sitter-rust = "0.24.0"
indoc = "2.0.4"
is_ci = "1.2.0"
nvim-treesitter-highlight-queries = { path = "nvim-treesitter-highlight-queries" }
tempfile.workspace = true


[profile.release]
debug = false # Set this to true when using `sudo cargo flamegraph`

[profile.release-lto]
inherits = 'release'
lto = true

[lints.clippy]
dbg_macro = "warn"
