## Modified from https://github.com/helix-editor/helix/tree/master/helix-loader
[package]
name = "grammar"
version = "0.6.0"
description = ""
authors = ["Blaž Hrastnik <blaz@mxxn.io>", "Wong Jia Hau"]
edition = "2021"
license = "MPL-2.0"
categories = ["editor"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
etcetera = "0.8"
tree-sitter.workspace = true
once_cell = "1.18"
log = "0.4"
which = "4.4"

# TODO: these two should be on !wasm32 only

# cloning/compiling tree-sitter grammars
cc = { version = "1" }
threadpool = { version = "1.0" }
tempfile = "3.8.0"
dunce = "1.0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8"
