[package]
name = "my_proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event = { path = "../event" }
quote = "1.0.42"
regex.workspace = true
syn = { version = "2.0.112", features = ["full"] }

[lib]
proc-macro = true
