[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json.workspace = true
tree-sitter.workspace = true
anyhow.workspace = true
once_cell.workspace = true
serde.workspace = true
lsp-types.workspace = true
regex.workspace = true
fancy-regex.workspace = true
tempfile.workspace = true
log.workspace = true
grammar = {path = "../grammar"}
isahc = "1.7.2"
url = "2.5.0"
which = "~7.0.0"
etcetera = "0.8"
itertools.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
