[package]
name = "zed-theme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.3"
miniz_oxide.workspace = true
serde.workspace = true
serde_json_lenient = "0.2.4"

[build-dependencies]
miniz_oxide.workspace = true
